[project]
name = "cv"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukael",email = "dev@lukael.kr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rendercv[full] (>=2.6,<3.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
